--- a/src/it/inaf/iasfpa/mpm/view/def.fxml
+++ b/src/it/inaf/iasfpa/mpm/view/def.fxml
@@ -255,7 +255,44 @@
                                   </Tab>
                                   <Tab text="MULTI">
                                     <content>
-                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                      <AnchorPane minHeight="0.0" minWidth="0.0">
+                                             <children>
+                                                <VBox layoutX="239.0" layoutY="53.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                   <children>
+                                                      <Label text="SCRIPT" />
+                                                      <TextArea prefHeight="200.0" prefWidth="200.0" />
+                                                      <HBox alignment="CENTER_RIGHT" spacing="15.0">
+                                                         <children>
+                                                            <Button mnemonicParsing="false" onAction="#createButtonEvent" text="CREATE" />
+                                                            <Button mnemonicParsing="false" text="OPEN" />
+                                                            <Button mnemonicParsing="false" text="RUN" />
+                                                         </children>
+                                                         <padding>
+                                                            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                         </padding>
+                                                      </HBox>
+                                                      <Separator prefWidth="200.0">
+                                                         <VBox.margin>
+                                                            <Insets bottom="5.0" top="5.0" />
+                                                         </VBox.margin>
+                                                      </Separator>
+                                                      <Label text="HISTORY" />
+                                                      <TextArea prefHeight="200.0" prefWidth="200.0" />
+                                                      <HBox alignment="CENTER_RIGHT" spacing="15.0">
+                                                         <children>
+                                                            <Button mnemonicParsing="false" text="CLEAR" />
+                                                            <Button mnemonicParsing="false" text="SAVE" />
+                                                         </children>
+                                                         <padding>
+                                                            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                         </padding>
+                                                      </HBox>
+                                                   </children>
+                                                   <padding>
+                                                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                   </padding>
+                                                </VBox>
+                                             </children></AnchorPane>
                                     </content>
                                   </Tab>
                                 </tabs>
