--- a/src/it/inaf/iasfpa/mpm/view/script_gui.fxml
+++ b/src/it/inaf/iasfpa/mpm/view/script_gui.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -15,8 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.inaf.iasfpa.mpm.view.ScriptGuiController">
    <children>
       <VBox layoutX="314.0" layoutY="40.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -28,25 +26,22 @@
                </padding>
                <children>
                   <Label text="MESSAGE" />
-                  <TextField />
+                  <TextField fx:id="message" />
                   <Label text="+" />
-                  <ComboBox prefWidth="150.0" />
+                  <ComboBox fx:id="errorControl" prefWidth="150.0" />
+                  <Separator orientation="VERTICAL" />
+                  <Label text="FORMAT:" />
+                  <ComboBox fx:id="format" prefWidth="150.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
-                  <CheckBox mnemonicParsing="false" text="REPEAT FOR" />
-                  <TextField />
+                  <CheckBox fx:id="repeatBox" mnemonicParsing="false" text="REPEAT FOR" />
+                  <TextField fx:id="numberRepeat" />
                   <Label text="TIMES" />
-               </children>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" spacing="10.0">
-               <children>
-                  <CheckBox mnemonicParsing="false" text="WAIT TIME" />
-                  <TextField />
+                  <Separator orientation="VERTICAL" />
+                  <CheckBox fx:id="waitBox" mnemonicParsing="false" text="WAIT TIME" />
+                  <TextField fx:id="waitTime" />
                   <Label text="mSec" />
                </children>
                <padding>
@@ -54,15 +49,27 @@
                </padding>
             </HBox>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
                <children>
-                  <Label text="COMMAND TYPE" />
-                  <RadioButton mnemonicParsing="false" text="SEND">
+                  <Label text="SLAVE ADDRESS (only I2C)" textAlignment="CENTER" />
+                  <ComboBox fx:id="slaveAddress" prefWidth="150.0" />
+                  <Separator orientation="VERTICAL" />
+                  <Label text="RECEIVE OPTION (only I2C)" />
+                  <ComboBox fx:id="recOptCombo" prefWidth="150.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" spacing="10.0">
+               <children>
+                  <Label text="COMMAND TYPE:" />
+                  <RadioButton fx:id="sendRB" mnemonicParsing="false" text="SEND">
                      <toggleGroup>
                         <ToggleGroup fx:id="group" />
                      </toggleGroup>
                   </RadioButton>
-                  <RadioButton mnemonicParsing="false" text="RECEIVE" toggleGroup="$group" />
-                  <RadioButton mnemonicParsing="false" text="SEND/RECEIVE" toggleGroup="$group" />
+                  <RadioButton fx:id="receiveRB" mnemonicParsing="false" text="RECEIVE" toggleGroup="$group" />
+                  <RadioButton fx:id="sendRecRB" mnemonicParsing="false" text="SEND/RECEIVE" toggleGroup="$group" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -70,7 +77,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT">
                <children>
-                  <CheckBox mnemonicParsing="false" text="RUN IN MONITORING THREAD" />
+                  <CheckBox fx:id="threadBox" mnemonicParsing="false" text="RUN IN MONITORING THREAD" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -78,7 +85,7 @@
             </HBox>
             <HBox alignment="CENTER_RIGHT">
                <children>
-                  <Button mnemonicParsing="false" text="ADD" />
+                  <Button fx:id="addLine" mnemonicParsing="false" onAction="#addButtonEvent" text="ADD" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="10.0" top="5.0" />
@@ -86,38 +93,23 @@
             </HBox>
             <Separator prefWidth="200.0" />
             <Label text="MONITORING THREAD" />
-            <TableView prefHeight="200.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="CMD" />
-                <TableColumn prefWidth="75.0" text="WAIT" />
-                  <TableColumn prefWidth="75.0" text="RT" />
-                  <TableColumn minWidth="30.0" prefWidth="90.0" text="MSG TYPE" />
-                  <TableColumn prefWidth="75.0" text="MSG" />
-                  <TableColumn prefWidth="75.0" text="CRC" />
-              </columns>
+            <TableView fx:id="monitoring" prefHeight="200.0">
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
             <Label text="CONTROL THREAD" />
-            <TableView prefHeight="200.0">
-              <columns>
-                <TableColumn text="CMD" />
-                <TableColumn prefWidth="75.0" text="WAIT" />
-                  <TableColumn minWidth="-1.0" prefWidth="-1.0" text="RT" />
-                  <TableColumn minWidth="30.0" prefWidth="90.0" text="MSG TYPE" />
-                  <TableColumn prefWidth="75.0" text="MSG" />
-                  <TableColumn prefWidth="75.0" text="CRC" />
-              </columns>
+            <TableView fx:id="control" prefHeight="200.0">
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
             <HBox alignment="CENTER_RIGHT" spacing="15.0">
                <children>
-                  <Button mnemonicParsing="false" text="OPEN" />
-                  <Button mnemonicParsing="false" text="SAVE" />
-                  <Button mnemonicParsing="false" text="LOAD" />
+                  <Button fx:id="removeLine" mnemonicParsing="false" onAction="#removeLineButtonEvent" text="REMOVE LINE" />
+                  <Button fx:id="open" mnemonicParsing="false" text="OPEN" />
+                  <Button fx:id="save" mnemonicParsing="false" onAction="#saveButtonEvent" text="SAVE" />
+                  <Button fx:id="load" mnemonicParsing="false" text="LOAD" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="10.0" top="5.0" />
