--- a/src/it/inaf/iasfpa/mpm/view/def.fxml
+++ b/src/it/inaf/iasfpa/mpm/view/def.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane stylesheets="@application_style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.inaf.iasfpa.mpm.view.MainController">
+<AnchorPane stylesheets="@application_style.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.inaf.iasfpa.mpm.view.MainController">
    <children>
       <VBox layoutX="188.0" layoutY="47.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -200,17 +200,17 @@
                                     <Insets left="5.0" />
                                  </VBox.margin>
                               </Label>
+                              <Separator>
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </VBox.margin>
+                              </Separator>
                               <TabPane tabClosingPolicy="UNAVAILABLE">
                                 <tabs>
                                   <Tab fx:id="single" onSelectionChanged="#singleTabEvent" text="SINGLE">
                                        <content>
                                           <VBox>
                                              <children>
-                                                <Separator>
-                                                   <VBox.margin>
-                                                      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                                   </VBox.margin>
-                                                </Separator>
                                                 <Label text="REQUEST">
                                                    <VBox.margin>
                                                       <Insets left="5.0" />
@@ -251,6 +251,9 @@
                                                    </padding>
                                                 </HBox>
                                              </children>
+                                             <padding>
+                                                <Insets top="5.0" />
+                                             </padding>
                                           </VBox>
                                        </content>
                                   </Tab>
