--- a/src/it/inaf/iasfpa/mpm/view/spidef.fxml
+++ b/src/it/inaf/iasfpa/mpm/view/spidef.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.inaf.iasfpa.mpm.view.SpiController">
    <children>
       <HBox spacing="20.0">
@@ -30,6 +29,17 @@
                   <ComboBox fx:id="csStatusCombo" onAction="#changeCsComboBox" prefWidth="150.0" />
                </children>
             </VBox>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" spacing="15.0">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+         <children>
+            <Label text="MTU [bytes] (0 for MAX)" />
+            <TextField fx:id="mtuField" />
+            <Label text="DELAY (ms)" />
+            <TextField fx:id="delayField" />
          </children>
       </HBox>
    </children>
