--- a/src/it/inaf/iasfpa/mpm/view/uartdef.fxml
+++ b/src/it/inaf/iasfpa/mpm/view/uartdef.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
@@ -35,6 +36,17 @@
                </children>
             </VBox>
          </children>
+      </HBox>
+      <HBox alignment="CENTER" spacing="15.0">
+         <children>
+            <Label text="MTU [bytes] (0 for MAX)" textAlignment="CENTER" />
+            <TextField fx:id="mtuField" />
+            <Label text="DELAY [ms]" textAlignment="CENTER" />
+            <TextField fx:id="delayField" />
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </HBox>
    </children>
    <padding>
